--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="purple_200">#BB86FC</color>
+    <color name="purple_500">#6200EE</color>
+    <color name="purple_700">#3700B3</color>
+    <color name="teal_200">#03DAC5</color>
+    <color name="teal_700">#018786</color>
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
 
     <!-- Theme colors   -->
-    <color name="colorAccent">#FF03DAC5</color>
-    <color name="colorAccentDark">#FF018786</color>
+    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccentDark">#018786</color>
 
     <!-- Text Colors -->
     <color name="primary_text_color">#343d46</color>
@@ -18,6 +18,11 @@
     <color name="thirdly_text_color">#65737e</color>
     <color name="warning_text_color">#ff6f69</color>
     <color name="highlight_text_color">#ffcc5c</color>
-    <color name="correct_text_color">#FF018786</color>
-    <color name="action_bar_text_color">#FFFFFFFF</color>
+    <color name="correct_text_color">#018786</color>
+    <color name="action_bar_text_color">#FFFFFF</color>
+
+    <!-- Game colors   -->
+    <color name="apple_color">#ff6f69</color>
+    <color name="snake_color_alive">#018786</color>
+    <color name="snake_color_dead">#ffcc5c</color>
 </resources>
