Change canvas background to be black

--- a/app/src/main/res/drawable/frame_canvas_background.xml
+++ b/app/src/main/res/drawable/frame_canvas_background.xml
@@ -3,9 +3,9 @@
     android:shape="rectangle">
     <stroke
         android:width="2dp"
-        android:color="@color/black" />
+        android:color="@color/colorAccentDark" />
 
-    <solid android:color="@color/white" />
+    <solid android:color="@color/black" />
 
 
 </shape>
